--- a/web_enterprise/static/src/less/app_switcher_layout.less
+++ b/web_enterprise/static/src/less/app_switcher_layout.less
@@ -3,7 +3,6 @@
 .o_application_switcher {
     height: 100%;
     overflow: auto;
-    padding-top: @odoo-navbar-height;
     .o-flex-display();
     .o-flex-flow(column, nowrap);
     .o-align-items(center);
